--- a/p/健身/index.html
+++ b/p/健身/index.html
@@ -365,8 +365,8 @@
 <h3 id="day2背肱二头">DAY2——背+肱二头
 </h3><p>待更新</p>
 <h3 id="day3肩">DAY3——肩
-</h3><p>哑铃侧平举 8-12个/组 共4组
-<img src="/image-5.png"
+</h3><p>哑铃侧平举 8-12个/组 共4组</p>
+<p><img src="/img/js-image-5.png"
 	
 	
 	
@@ -375,9 +375,9 @@
 		alt="哑铃侧平举"
 	
 	
->
-龙门架绳索侧平举 8-12个/组 共4组
-<img src="/image-6.png"
+></p>
+<p>龙门架绳索侧平举 8-12个/组 共4组</p>
+<p><img src="/img/js-image-6.png"
 	
 	
 	
@@ -386,9 +386,9 @@
 		alt="绳索侧平举"
 	
 	
->
-站立史密斯杠铃推举 8-12个/组 共4组
-<img src="/image-7.png"
+></p>
+<p>站立史密斯杠铃推举 8-12个/组 共4组</p>
+<p><img src="/img/js-image-7.png"
 	
 	
 	
@@ -397,9 +397,9 @@
 		alt="史密斯杠铃推举"
 	
 	
->
-器械反向飞鸟 8-12个/组 共4组
-<img src="/image-3.png"
+></p>
+<p>器械反向飞鸟 8-12个/组 共4组</p>
+<p><img src="/img/js-image-3.png"
 	
 	
 	
@@ -408,9 +408,9 @@
 		alt="器械反向飞鸟"
 	
 	
->
-绳索面拉 8-12个/组 共4组
-<img src="/image-4.png"
+></p>
+<p>绳索面拉 8-12个/组 共4组</p>
+<p><img src="/img/js-image-4.png"
 	
 	
 	
