--- a/关于/index.html
+++ b/关于/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="zh-cn" dir="ltr">
-    <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script><meta charset='utf-8'>
+    <head><meta charset='utf-8'>
 <meta name='viewport' content='width=device-width, initial-scale=1'><meta name='description' content="喜欢折腾网络相关的一名大学生\n不知道写什么了LOL\n">
 <title>关于</title>
 
-<link rel='canonical' href='http://localhost:1313/%E5%85%B3%E4%BA%8E/'>
+<link rel='canonical' href='https://ryanl1nk.github.io/%E5%85%B3%E4%BA%8E/'>
 
 <link rel="stylesheet" href="/scss/style.min.b9c8156d464c343bdacaf14a871581fb94cbbdb9dd5cbce4ba017361187cc930.css"><meta property='og:title' content="关于">
 <meta property='og:description' content="喜欢折腾网络相关的一名大学生\n不知道写什么了LOL\n">
-<meta property='og:url' content='http://localhost:1313/%E5%85%B3%E4%BA%8E/'>
+<meta property='og:url' content='https://ryanl1nk.github.io/%E5%85%B3%E4%BA%8E/'>
 <meta property='og:site_name' content='Ryan的个人博客'>
 <meta property='og:type' content='article'><meta property='article:section' content='Page' />
 <meta name="twitter:title" content="关于">
@@ -419,7 +419,7 @@
                 src="https://cdn.jsdelivr.net/npm/node-vibrant@3.1.6/dist/vibrant.min.js"integrity="sha256-awcR2jno4kI5X0zL8ex0vi2z&#43;KMkF24hUW8WePSA9HM="crossorigin="anonymous"
                 
                 >
-            </script><script type="text/javascript" src="/ts/main.f99e6296e08f95d69682c8bd1840bad1f16f58d60731143c1bef684d22d00b10.js" defer></script>
+            </script><script type="text/javascript" src="/ts/main.1e9a3bafd846ced4c345d084b355fb8c7bae75701c338f8a1f8a82c780137826.js" defer></script>
 <script>
     (function () {
         const customFont = document.createElement('link');
